<resources>
    <string name="app_name" translatable="false">LiteRadar</string>
    <string name="titleFmt">%s %s</string>
    <string name="keyFmt">Signature key: %s bit</string>
    <string name="key_dateFmt">Created: %tF</string>
    <string name="aliasLbl">Alias: </string>
    <string name="intf_any">Any available</string>
    <string name="intf_unavailable">/unavailable</string>
    <string name="mode_selectLbl">Select mode:</string>
    <string-array name="mode_array">
        <item>Tracker only</item>
        <item>UDP Group member</item>
        <item>UDP Client</item>
    </string-array>
    <string name="tracker_showLbl">show tracker</string>
    <string name="int_selectLbl">Select interface:</string>
    <string name="addressLbl">IP address:</string>
    <string name="exitLbl">Exit LiteRadar</string>
    <string name="cancelLbl">Cancel</string>
    <string name="restartLbl">Save &amp; Restart</string>
    <string name="err_wrong_address">Wrong or missed address!</string>
    <string name="err_address_required">"IP address:port required! "</string>
    <string name="err_settings_read">Settings file read error.</string>
    <string name="err_settings_write">Settings file write error.</string>
    <string name="err_settings_msg">Сontinue with the current settings.</string>
    <string name="err_geolocation">Geolocation unavailable</string>
    <string name="err_network">Network error</string>
    <string name="on_air">Tap here to show the control panel</string>
    <string name="section_generalLbl">Settings</string>
    <string name="favorites_onlyLbl">favorites only</string>
    <string name="minTimeLbl">"Geolocation interval (sec): "</string>
    <string name="minDistanceLbl">"min Distance (m): "</string>
    <string name="section_favoritesLbl">Favorites</string>
    <string name="toastClipTag">"The tag in the clipboard"</string>

</resources>